src/components/hero/hero.scss
@import "../../app.scss";

.hero {
  height: calc(100vh - 100px);
  background: linear-gradient(180deg, #cf0080, #4c00ce);
  overflow: hidden;
  position: relative;

  .wrapper {
    max-width: 1366px;
    height: 100%;
    width: 50%;
    margin: auto;

    .text {
      height: 100%;
      display: flex;
      flex-direction: column;
      justify-content: center;
      gap: 40px;

      @include mobile {
        height: 80%;
        width: 100%;
        gap: 20px;
        align-items: center;
        text-align: center;
      }

      h1 {
        font-size: 88px;
        font-weight: 600;
        color: #b9f747;

        @include mobile {
          font-size: 56px;
        }
      }

      h2 {
        font-size: 30px;
        letter-spacing: 10px;
      }

      .action {
        display: flex;
        gap: 20px;

        @include mobile {
          flex-direction: column;
        }

        button {
          padding: 20px;
          border: 1px solid white;
          border-radius: 10px;
          background-color: transparent;
          color: white;
          cursor: pointer;
          font-weight: 300;

          @include mobile {
            margin-right: 0;
          }
        }

        button.primary {
          color: black;
          background-color: white;
        }
      }

      img {
        width: 50px;
      }
    }
  }

  .img {
    height: 100%;
    position: absolute;
    top: 0;
    right: 0;

    img {
      border-radius: 10% / 50%;
    }
  }
}

